--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -1,9 +1,23 @@
 # Set everything to be logged to the console
-log4j.rootCategory=INFO, console
+log4j.rootCategory=INFO, console, FILE
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.target=System.err
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{yy/MM/dd HH:mm:ss,SSS} %p [%t] %c.%M:%L | %m%n
+
+# Define the file appender
+log4j.appender.FILE=org.apache.log4j.RollingFileAppender
+# Set the name of the file
+log4j.appender.FILE.File=${spark_export_sql_log_path}/export.log
+
+# Set the immediate flush to true (default)
+log4j.appender.FILE.Threshold=debug
+log4j.appender.FILE.ImmediateFlush=true
+log4j.appender.FILE.Append=true
+log4j.appender.FILE.MaxFileSize=1024KB
+log4j.appender.FILE.MaxBackupIndex=10
+log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
+log4j.appender.FILE.layout.conversionPattern=%d{yy/MM/dd HH:mm:ss,SSS} %p [%t] %c.%M:%L | %m%n
 
 # Settings to quiet third party logs that are too verbose
 log4j.logger.org.spark-project.jetty=WARN
