--- a/conf/running.properties
+++ b/conf/running.properties
@@ -1,4 +1,5 @@
-sql.type=thrift
-jdbc.uri=jdbc:hive2://localhost:10015/default
+sql.type=hbase
+jdbc.uri=jdbc:phoenix:ocbuild02.jcloud.local,ocbuild01.jcloud.local:2181:/hbase-unsecure
 output.table.header.enable=false
 output.table.column.separator=,
+export.interval-s=600
