--- a/conf/running.properties
+++ b/conf/running.properties
@@ -1,5 +1,7 @@
 sql.type=hbase
+secure.enable=false
 jdbc.uri=jdbc:phoenix:ocbuild02.jcloud.local,ocbuild01.jcloud.local:2181:/hbase-unsecure
+secure.jdbc.uri=jdbc:phoenix:ocbuild02.jcloud.local,ocbuild01.jcloud.local:2181:/hbase:principal_name@REALM.COM:/path/to/principal_name.keytab
 output.table.header.enable=false
 output.table.column.separator=,
 export.interval-s=600
